# dotfiles

./: .gitignore  .gitmodules  README.md  Xdefaults  Xmodmap  Xmodmap1  Xmodmap2  Xmodmap_jis  Xmodmap_us  Xresources  a.ipynb  bashrc  byobu.conf  condarc  config.fish  dein.toml  editorconfig  env.conf  environment.yml  fishfile  fonts.conf  gitconfig  gitignore_global  ideavimrc  install  install.sh  kitty.conf  latexmkrc  link.sh  mozc.tsv  mpv.conf  peco.json  pylintrc  template.ipynb  tigrc  tmux.conf  tym.lua  vimperatorrc  vimrc  xinitrc  (+4 more)
Xmodmaps/: Xmodmap_us  Xmodmap_va86  Xmodmap_xps13
claude/: CLAUDE.md  statusline.sh
compiz/: arch-mate.profile
docs/: troubleshooting.md
hwdb/: 10-xps.hwdb
keyd/: us.conf  va86.conf  xps.conf
misc/: 10-xps.hwdb  Mu-custom.emerald  NDPview2.desktop  arch.emerald  classpath.gradle  compiz-arch-il-old.profile  compiz-arch-mate.profile  compiz-mate-desktop.profile  compiz-mate-laptop.profile  docker-config.json  endaaman.map  fonts-hl2.conf  fonts-ms.conf  gene-utf8.txt  hl2.conf  jupyter-vim-bind.js  jupyter_lab_config.py  kde-shortcuts.kksrc  keyd.conf  kwin.kksrc  mozc-new.tsv  mozc-user.txt  mozc.tsv  mozc_dic.txt  vconsole.conf
mlterm/: aafont  color  key  main
nvim/: init.lua  lazy-lock.json
python/: ml.txt  ml11.txt  ml12.txt  user.txt
syncthing/: stignore
systemd/: month-dir.service  month-dir.timer  pueue.service  ssh-agent.service  today-dir.service  today-dir.timer  today.service
termite/: config
tmux.d/: keys.conf  status.conf  without-byobu.conf
tym/: config.lua  (+1 more)
uvenvs/ml/: pyproject.toml
(+147 files in other folders)
