[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "albumentations>=2.0.8",
    "h5py>=3.14.0",
    "igraph>=0.11.9",
    "jedi>=0.19.2",
    "leidenalg>=0.10.2",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "numpy<2",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "openslide-python>=1.4.2",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "pylint>=3.3.7",
    "requests>=2.32.4",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "umap-learn>=0.5.7",
]

[tool.uv]
project-environment = ".ml"
